[gd_scene load_steps=7 format=3 uid="uid://c8ukxnyoquf2e"]

[ext_resource type="Texture2D" uid="uid://brkv4yvit1ymm" path="res://Assets/sponge.png" id="1_4a2k3"]
[ext_resource type="Script" path="res://Scripts/inimigo.gd" id="1_q6y7h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_th20n"]

[sub_resource type="Animation" id="Animation_jlk2u"]
resource_name = "dano"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0.258824, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_u7isv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d3ndf"]
_data = {
"RESET": SubResource("Animation_u7isv"),
"dano": SubResource("Animation_jlk2u")
}

[node name="Inimigo" type="Area2D" groups=["inimigo"]]
scale = Vector2(1.2, 1.2)
script = ExtResource("1_q6y7h")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -2)
texture = ExtResource("1_4a2k3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_th20n")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d3ndf")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
